organization fixes